# ogcapi-pydantic

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy_mkdocs.yml
docs/: mkdocs.yml
ogcapi_pydantic/: model.py
ogcapi_pydantic/misc/: __init__.py  maps.py
tests/: test_module.py
